[package]
name = "learn_rust_xxx"
version = "0.1.2"
authors = ["Freeman.Xiong <xiongchenyu6@gmail.com>"]
edition = "2021"
default-run = "learn_rust_xxx"
description = "A brief description of your package"
license = "MIT"                                           # Or another appropriate license
repository = "https://github.com/xiongchenyu6/learn_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.13"
scraper = "0.13.0"
