[package]
name = "learn_rust_xxx"
version = "0.1.2"
authors = ["Freeman.Xiong <xiongchenyu6@gmail.com>"]
edition = "2021"
default-run = "learn_rust_xxx"
description = "A brief description of your package"
license = "MIT"                                           # Or another appropriate license
repository = "https://github.com/xiongchenyu6/learn_rust"

[dependencies]
rocket = {version = "*", features = ["json"]}
webrtc = "0.11.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
